--- a/vortex_detection.ipynb
+++ b/vortex_detection.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep learning based quantum vortex detection in Bose-Einstein condensates\n",
+    "# Deep learning based quantum vortex detection in atomic Bose-Einstein condensates\n",
     "\n",
     "Created by Friederike Metz\n",
     "\n",
-    "This jupyter notebook accompanies the paper: [Deep learning based quantum vortex detection in Bose-Einstein condensates](https://arxiv.org/abs/2012.13097)\n",
+    "This jupyter notebook accompanies the paper: [Deep learning based quantum vortex detection in atomic Bose-Einstein condensates](https://arxiv.org/abs/2012.13097)\n",
     "\n",
     "#### Content\n",
     "1. Read and prepare training & test data\n",
