--- a/vortex_detection.ipynb
+++ b/vortex_detection.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import all necessary libraries"
+    "Import all necessary libraries to run the notebook. (Some of these libraries have to be installed first.)"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# costum functions needed for this notebook\n",
+    "# custom functions needed for this notebook\n",
     "include(\"utils.jl\");"
    ]
   },
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To help the CNN with training, image pixels should be normalized to lie between [0,1]"
+    "To help the CNN with training, image pixels should be normalized to lie between [0,1]."
    ]
   },
   {
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following two cells convert the list of positions of vortices to a $64\\times 63\\times 3$ label tensor used for training and vice versa"
+    "The following two cells convert the list of positions of vortices to a $64\\times 63\\times 3$ label tensor used for training and vice versa."
    ]
   },
   {
@@ -664,7 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the figures above white circles indicate the \"ground-truth\" and red crosses the model prediction"
+    "In the figures above white circles indicate the \"ground-truth\" and red crosses the model prediction."
    ]
   },
   {
