--- a/vortex_detection_classification.ipynb
+++ b/vortex_detection_classification.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import all necessary libraries"
+    " Import all necessary libraries to run the notebook. (Some of these libraries have to be installed first.)"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# costum functions needed for this notebook\n",
+    "# custom functions needed for this notebook\n",
     "include(\"utils.jl\");"
    ]
   },
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To help the CNN with training, image pixels should be normalized to lie between [0,1]"
+    "To help the CNN with training, image pixels should be normalized to lie between [0,1]."
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following two cells convert the list of positions of vortices to a $64\\times 63\\times 4$ label tensor used for training and vice versa"
+    "The following two cells convert the list of positions of vortices to a $64\\times 63\\times 4$ label tensor used for training and vice versa."
    ]
   },
   {
